force-app/main/default/objects/Self_Assessment_Answer__c/Self_Assessment_Answer__c.object-meta.xml
<CustomObject>
    <description>A participant&apos;s response to a particular Self-Assessment Question</description>
    <label>Self-Assessment Answer</label>
    <nameField>
        <displayFormat>SAA-{0000000}</displayFormat>
        <label>Self-Assessment Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Self-Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>