force-app/main/default/objects/Self_Assessment_Answer__c/fields/Answer_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>Answer_Text_Area__c</fullName>
    <label>Answer Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>