force-app/main/default/objects/Self_Assessment_Answer__c/fields/Maximum_Value__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Value__c</fullName>
    <label>Maximum Value</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>