force-app/main/default/objects/Self_Assessment_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question text at the time it was answered</description>
    <inlineHelpText>The question text at the time it was answered</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>