force-app/main/default/objects/Self_Assessment_Answer__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <description>The data type of the question</description>
    <label>Question Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Question_Types</valueSetName>
    </valueSet>
</CustomField>