force-app/main/default/objects/Self_Assessment_Answer__c/fields/Self_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment__c</fullName>
    <label>Self-Assessment</label>
    <referenceTo>Self_Assessment__c</referenceTo>
    <relationshipLabel>Self-Assessment Answers</relationshipLabel>
    <relationshipName>Self_Assessment_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>