force-app/main/default/objects/Self_Assessment_Answer__c/fields/Self_Assessment_Question__c.field-meta.xml
<CustomField>
    <fullName>Self_Assessment_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Self-Assessment Question</label>
    <referenceTo>Self_Assessment_Question__c</referenceTo>
    <relationshipLabel>Self-Assessment Answers</relationshipLabel>
    <relationshipName>Self_Assessment_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>