force-app/main/default/objects/Self_Assessment_Answer__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which this question appeared in the self-assessment</description>
    <inlineHelpText>The order in which this question appeared in the self-assessment</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>