force-app/main/default/objects/Self_Assessment_Answer__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <description>The increment between each option in the rating scale. It defines the smallest difference participants can select between the Minimum Value and Maximum Value.</description>
    <inlineHelpText>The increment between each option in the rating scale. It defines the smallest difference participants can select between the Minimum Value and Maximum Value.</inlineHelpText>
    <label>Step</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>