force-app/main/default/objects/Self_Assessment_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sort_Order__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question__c</columns>
    <columns>Answer_Number__c</columns>
    <columns>Answer_Text_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>